:wrench:: Fix logo isn't center aligned

--- a/froggy-gaming/src/HomepageLayout/homepageCategory/assets/homepagecat.scss
+++ b/froggy-gaming/src/HomepageLayout/homepageCategory/assets/homepagecat.scss
@@ -188,11 +188,11 @@ $hover-animation: cubic-bezier(0.7, 0.3, 0.5, 0.45);
 
             &-name {
                 font-size: 1.4rem;
-                width: calc(40% - 5rem);
+                width: calc(40% - 8rem);
             }
 
             &-img {
-                width: calc(60% - 5rem);
+                width: calc(60% - 8rem);
                 object-fit: cover;
 
             }
